[gd_scene load_steps=10 format=2]

[ext_resource path="res://screens/demo.gd" type="Script" id=1]
[ext_resource path="res://assets/demo-atlas.png" type="Texture" id=2]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 31.5, 12.5, 434, 440 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 902.5, 61.5, 73, 75 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 913.5, 193.5, 82, 44 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 521.5, 55.5, 106, 89 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 525.5, 149.5, 94, 83 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 666.5, 62.5, 116, 77 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 684.5, 155.5, 84, 77 )

[node name="Demo" type="Node2D"]
script = ExtResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="ModelRoot" type="Node2D" parent="."]

[node name="Head" type="Sprite" parent="ModelRoot"]
texture = SubResource( 1 )

[node name="Nose" type="Sprite" parent="ModelRoot/Head"]
position = Vector2( 5, 39 )
texture = SubResource( 2 )

[node name="Mouth" type="Sprite" parent="ModelRoot/Head"]
position = Vector2( -1, 120 )
texture = SubResource( 3 )

[node name="LeftEyeSocket" type="Sprite" parent="ModelRoot/Head"]
position = Vector2( -87, -4 )
texture = SubResource( 4 )

[node name="LeftEye" type="Sprite" parent="ModelRoot/Head/LeftEyeSocket"]
texture = SubResource( 6 )

[node name="RightEyeSocket" type="Sprite" parent="ModelRoot/Head"]
position = Vector2( 71, -6 )
texture = SubResource( 5 )

[node name="RightEye" type="Sprite" parent="ModelRoot/Head/RightEyeSocket"]
position = Vector2( 0, 1 )
texture = SubResource( 7 )
